# deepmriprep

./: LICENSE  README.md  pyproject.toml
data/: patches.csv
data/templates/: mori.csv  neuromorphometrics.csv
deepmriprep/: __init__.py  atlas.py  preprocess.py  register.py  segment.py  smooth.py  utils.py
deepmriprep/data/templates/: aal3.csv
deepmriprep/ui/: cli.py  gui.py
test/: test_segment.py  test_smooth.py  test_warp.py
